fix: text box alignment CSS

--- a/src/pages/page.css
+++ b/src/pages/page.css
@@ -110,7 +110,9 @@ a {
   flex-grow: 1;
   display: flex;
   flex-direction: column;
-  width: 80%;
+  width: 100%;
+  justify-content: center;
+  align-items: center;
 }
 
 .scam-item .message-box {
@@ -121,6 +123,7 @@ a {
   flex-grow: 1;
   position: relative;
   word-break: break-word;
+  width: 80%;
 }
 
 /* .scam-item .message-box::before {
